Create candidate entity and repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=3000
 spring.datasource.url=jdbc:postgresql://localhost:5432/jobs_management
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
