--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "security.token.secret",
-  "type": "java.lang.String",
-  "description": "The secret key used for signing JWT"
-}]}
+{"properties": [
+  {
+    "name": "security.token.secret.company",
+    "type": "java.lang.String",
+    "description": "A description for 'security.token.secret.company'"
+  },
+  {
+    "name": "security.token.secret.candidate",
+    "type": "java.lang.String",
+    "description": "A description for 'security.token.secret.candidate'"
+  }
+]}
