--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
-security.token.secret=dummySecret
+security.token.secret.company=dummySecret
+security.token.secret.candidate=dummySecret2
